--- a/web_application/templates/base.html
+++ b/web_application/templates/base.html
@@ -24,6 +24,8 @@
             <a class="nav-item nav-link" href="">View Networks</a>
             <a class="nav-item nav-link" href="">View Devices</a>
             <a class="nav-item nav-link" href="">Kickoff Run</a>
+            <a class="nav-item nav-link" href="">Add Device</a>
+            <a class="nav-item nav-link" href="">Add Network</a>
         </div>
     </nav>
 
