--- a/web_application/templates/base.html
+++ b/web_application/templates/base.html
@@ -28,6 +28,12 @@
             <a class="nav-item nav-link" href="{{url_for('devices.add_device')}}">Add Device</a>
             <a class="nav-item nav-link" href="{{url_for('networks.delete_network')}}">Delete Network</a>
             <a class="nav-item nav-link" href="{{url_for('devices.delete_device')}}">Delete Device</a>
+            {% if current_user.is_authenticated %}
+            <a class="nav-item nav-link" href="{{url_for('authentication.logout')}}">Log Out</a>
+            {% else %}
+            <a class="nav-item nav-link" href="{{url_for('authentication.register')}}">Register</a>
+            <a class="nav-item nav-link" href="{{url_for('authentication.login')}}">Log In</a>
+            {% endif %}
         </div>
     </nav>
 
