Add table for displaying networks

--- a/web_application/templates/networks/list_networks.html
+++ b/web_application/templates/networks/list_networks.html
@@ -5,10 +5,31 @@
 <div class="jumbotron">
     <h1>List of Networks</h1>
     <p>Here is a list of the networks in the database</p>
-    <ul>
-        {% for network in networks %}
-        <li>{{network}}</li>
-        {% endfor %}
-    </ul>
+    <table class="table">
+        <thead>
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Datatype</th>
+                <th scope="col">Provenance</th>
+                <th scope="col">Format</th>
+                <th scope="col">Date Added</th>
+                <th scope="col">Date of Last Run</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for network in networks %}
+            <tr>
+                <td>{{network["id"]}}</td>
+                <td>{{network["name"]}}</td>
+                <td>{{network["datatype"]}}</td>
+                <td>{{network["provenance"]}}</td>
+                <td>{{network["format"]}}</td>
+                <td>{{network["date_added"]}}</td>
+                <td>{{network["last_run"]}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 </div>
 {% endblock %}
