--- a/web_application/templates/authentication/register.html
+++ b/web_application/templates/authentication/register.html
@@ -2,20 +2,36 @@
 
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
-    <h1>Create a new account</h1>
-    <form method="POST">
-        {{form.hidden_tag()}}
-        {{form.email.label}}{{form.email()}}
+<div class="container my-5">
+    <div class="jumbotron text-center bg-body-secondary">
+        <h1 class="text-body-emphasis">Create a new Account</h1>
+        <p>With an account, you will be able to view and manage device and network configurations</p>
+        <p>You will also be able to begin new tests</p>
         <br>
-        {{form.username.label}}{{form.username()}}
-        <br>
-        {{form.password.label}}{{form.password()}}
-        <br>
-        {{form.confirm_password.label}}{{form.confirm_password()}}
-        <br>
-        {{form.submit()}}
-
-    </form>
+        <div class="d-inline-flex gap-2 mb-5">
+            <form method="POST">
+                {{form.hidden_tag()}}
+                <div class="form-floating">
+                    {{form.email(class="form-control")}}
+                    {{form.email.label()}}
+                </div>
+                <div class="form-floating">
+                    {{form.username(class="form-control")}}
+                    {{form.username.label()}}
+                </div>
+                <br>
+                <div class="form-floating">
+                    {{form.password(class="form-control")}}
+                    {{form.password.label()}}
+                </div>
+                <div class="form-floating">
+                    {{form.confirm_password(class="form-control")}}
+                    {{form.confirm_password.label()}}
+                </div>
+                <br>
+                {{form.submit(class="btn btn-outline-primary px-5")}}
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
