--- a/web_application/templates/home.html
+++ b/web_application/templates/home.html
@@ -8,7 +8,11 @@
     <p>This web application is designed to aggregate all the information needed to start automated tests using
         Jenkins</p>
     <p>Users can view and manage device and network configurations before kicking off new builds on Jenkins.</p>
+    {% if current_user.is_authenticated %}
+    <p>Navigate to Devices or Networks to get started</p>
+    {% else %}
     <p>Login or Register to get started</p>
+    {% endif %}
 
 </div>
 
