--- a/web_application/templates/authentication/login.html
+++ b/web_application/templates/authentication/login.html
@@ -11,14 +11,14 @@
                 {{form.hidden_tag()}}
                 <div class="form-floating">
                     {{form.username(class="form-control")}}
-                    {{form.username.label()}}
+                    {{form.username.label}}
                 </div>
                 <div class="form-floating">
                     {{form.password(class="form-control")}}
-                    {{form.password.label()}}
+                    {{form.password.label}}
                 </div>
                 <br>
-                {{form.submit(class="btn btn-outline-primary")}}
+                {{form.submit(class="btn col-lg-12")}}
             </form>
         </div>
     </div>
