--- a/web_application/templates/authentication/register.html
+++ b/web_application/templates/authentication/register.html
@@ -29,7 +29,7 @@
                     {{form.confirm_password.label()}}
                 </div>
                 <br>
-                {{form.submit(class="btn btn-outline-primary px-5")}}
+                {{form.submit(class="btn col-lg-12")}}
             </form>
         </div>
     </div>
