--- a/web_application/templates/base.html
+++ b/web_application/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(0, 43, 73);">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #002b49;">
         <div class="container-fluid">
             <div class="col">
                 <ul class="navbar-nav me-left">
@@ -41,12 +41,13 @@
                 </ul>
             </div>
             <div class="col-sm-auto">
-                <h1 class="text-center" , style="color: white;">System Analysis Configurations Dashboard</h1>
+                <h1 class="text-center" style="color: #ffffff;">System Analysis Configurations
+                    Dashboard</h1>
             </div>
             <div class="col">
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
-                    <li class="navbar-text ms-auto" , style="color: rgb(242, 250, 249)">Welcome,
+                    <li class="navbar-text ms-auto" , style="color: #f2faf9">Welcome,
                         {{current_user.username}}</li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('authentication.logout')}}">Logout</a>
