--- a/web_application/templates/networks/list_networks.html
+++ b/web_application/templates/networks/list_networks.html
@@ -2,17 +2,20 @@
 
 {% extends "base.html" %}
 {% block content %}
-<div class="jumbotron">
+<div class="jumbotron text-center p-5">
     <h1>List of Networks</h1>
     <p>Here is a list of the networks in the database</p>
     <div class="btn-group" role="group" aria-label="Default button group">
-        <button type="button" class="btn btn-outline-dark">Add Network</button>
-        <button type="button" class="btn btn-outline-dark">Update Network</button>
+        <a type="button" class="btn" href="{{url_for('networks.add_network')}}">Add Network</a>
+        <a type="button" class="btn" href="{{url_for('networks.list_networks')}}">Update Network</a>
         {% if current_user.is_admin == True %}
-        <button type="button" class="btn btn-outline-dark">Delete Network</button>
+        <a type="button" class="btn" href="{{url_for('networks.delete_network')}}">Delete Network</a>
         {% endif %}
     </div>
-    <table class="table table-bordered border-primary">
+</div>
+<div class="jumbotron">
+
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th scope="col">ID</th>
