--- a/web_application/templates/networks/list_networks.html
+++ b/web_application/templates/networks/list_networks.html
@@ -7,7 +7,7 @@
     <p>Here is a list of the networks in the database</p>
     <div class="btn-group" role="group" aria-label="Default button group">
         <a type="button" class="btn" href="{{url_for('networks.add_network')}}">Add Network</a>
-        <a type="button" class="btn" href="{{url_for('networks.list_networks')}}">Update Network</a>
+        <a type="button" class="btn" href="{{url_for('networks.update_network')}}">Update Network</a>
         {% if current_user.is_admin == True %}
         <a type="button" class="btn" href="{{url_for('networks.delete_network')}}">Delete Network</a>
         {% endif %}
