Add placeholders to improve floating label inputs

--- a/web_application/templates/authentication/login.html
+++ b/web_application/templates/authentication/login.html
@@ -10,11 +10,11 @@
             <form method="POST">
                 {{form.hidden_tag()}}
                 <div class="form-floating">
-                    {{form.username(class="form-control")}}
+                    {{form.username(class="form-control", placeholder="")}}
                     {{form.username.label}}
                 </div>
                 <div class="form-floating">
-                    {{form.password(class="form-control")}}
+                    {{form.password(class="form-control", placeholder="")}}
                     {{form.password.label}}
                 </div>
                 <br>
