--- a/web_application/templates/authentication/register.html
+++ b/web_application/templates/authentication/register.html
@@ -12,20 +12,20 @@
             <form method="POST">
                 {{form.hidden_tag()}}
                 <div class="form-floating">
-                    {{form.email(class="form-control")}}
+                    {{form.email(class="form-control", placeholder="")}}
                     {{form.email.label()}}
                 </div>
                 <div class="form-floating">
-                    {{form.username(class="form-control")}}
+                    {{form.username(class="form-control", placeholder="")}}
                     {{form.username.label()}}
                 </div>
                 <br>
                 <div class="form-floating">
-                    {{form.password(class="form-control")}}
+                    {{form.password(class="form-control", placeholder="")}}
                     {{form.password.label()}}
                 </div>
                 <div class="form-floating">
-                    {{form.confirm_password(class="form-control")}}
+                    {{form.confirm_password(class="form-control", placeholder="")}}
                     {{form.confirm_password.label()}}
                 </div>
                 <br>
