--- a/web_application/templates/devices/delete_device.html
+++ b/web_application/templates/devices/delete_device.html
@@ -9,7 +9,7 @@
         <form method="POST">
             {{form.hidden_tag()}}
             <div class="form-floating">
-                {{form.id(class="form-control")}}
+                {{form.id(class="form-control", placeholder="")}}
                 {{form.id.label}}
             </div>
             <br>
