--- a/web_application/templates/devices/update_device.html
+++ b/web_application/templates/devices/update_device.html
@@ -5,23 +5,24 @@
 <div class="jumbotron text-center p-5">
     <h1>Update a Device Configuration</h1>
     <p>Select a Configuration from the dropdown, then enter the new information in the fields</p>
+    <p>Fields can be left blank to leave the data unchanged</p>
     <div class="col-xxl-4 col-lg-6 mx-auto">
         <form method="POST">
             {{form.hidden_tag()}}
             {{form.device(class="form-select")}}
             <br>
             <div class="form-floating">
-                {{form.name(class="form-control", value=device.name)}}
+                {{form.name(class="form-control", placeholder="")}}
                 {{form.name.label}}
             </div>
             <br>
             <div class="form-floating">
-                {{form.type(class="form-control", value=device.type)}}
+                {{form.type(class="form-control", placeholder="")}}
                 {{form.type.label}}
             </div>
             <br>
             <div class="form-floating">
-                {{form.os(class="form-control", value=device.os)}}
+                {{form.os(class="form-control", placeholder="")}}
                 {{form.os.label}}
             </div>
             <p>IP</p>
