--- a/web_application/templates/devices/add_device.html
+++ b/web_application/templates/devices/add_device.html
@@ -4,7 +4,9 @@
 {% block content %}
 <div class="jumbotron text-center p-5">
     <h1>Add a New Device Configuration</h1>
+    <br>
     <p>Enter the information below to add a new device</p>
+    <br>
     <div class="col-xxl-4 col-lg-6 mx-auto">
         <form method="POST">
             {{form.hidden_tag()}}
@@ -32,8 +34,10 @@
             {% endfor %}
             <br>
             <br>
-            {{form.submit(class="btn col-lg-12")}}
-
+            <div class="row">
+                {{form.submit(class="btn col-lg-6")}}
+                <a href="{{url_for('devices.list_devices')}}" class="btn col-lg-6">Cancel</a>
+            </div>
         </form>
     </div>
 </div>
