--- a/web_application/templates/devices/delete_device.html
+++ b/web_application/templates/devices/delete_device.html
@@ -4,7 +4,9 @@
 {% block content %}
 <div class="jumbotron text-center p-5">
     <h1>Delete a Device</h1>
+    <br>
     <p>Enter a device ID to remove it from the database</p>
+    <br>
     <div class="d-inline-flex gap-2 mb-5">
         <form method="POST">
             {{form.hidden_tag()}}
@@ -13,7 +15,11 @@
                 {{form.id.label}}
             </div>
             <br>
-            {{form.submit(class="btn col-lg-12")}}
+            <br>
+            <div class="row">
+                {{form.submit(class="btn col-lg-6")}}
+                <a href="{{url_for('devices.list_devices')}}" class="btn col-lg-6">Cancel</a>
+            </div>
         </form>
     </div>
 </div>
