--- a/web_application/templates/devices/update_device.html
+++ b/web_application/templates/devices/update_device.html
@@ -4,8 +4,10 @@
 {% block content %}
 <div class="jumbotron text-center p-5">
     <h1>Update a Device Configuration</h1>
+    <br>
     <p>Select a Configuration from the dropdown, then enter the new information in the fields</p>
     <p>Fields can be left blank to leave the data unchanged</p>
+    <br>
     <div class="col-xxl-4 col-lg-6 mx-auto">
         <form method="POST">
             {{form.hidden_tag()}}
@@ -35,7 +37,10 @@
             {% endfor %}
             <br>
             <br>
-            {{form.submit(class="btn col-lg-12")}}
+            <div class="row">
+                {{form.submit(class="btn col-lg-6")}}
+                <a href="{{url_for('devices.list_devices')}}" class="btn col-lg-6">Cancel</a>
+            </div>
 
         </form>
     </div>
