--- a/web_application/templates/devices/add_device.html
+++ b/web_application/templates/devices/add_device.html
@@ -7,7 +7,7 @@
     <br>
     {% if form.ip.choices|length == 0 %}
     <p class="text-center">There are no entries in the IP table</p>
-    <p class="text-center">This means you will not be able to add a device configuration with a referenced IP</p>
+    <p class="text-center">This means you will not be able to add a Device configuration with a referenced IP</p>
     {% if current_user.is_admin == True %}
     <a href="{{url_for('authentication.populate_db_tables')}}" class="btn col-lg-6">Click here to populate database
         tables</a>
