--- a/web_application/templates/devices/delete_device.html
+++ b/web_application/templates/devices/delete_device.html
@@ -5,7 +5,7 @@
 <div class="jumbotron text-center p-5">
     <h1>Delete a Device</h1>
     <br>
-    <p>Enter a device ID to remove it from the database</p>
+    <p>Select a Device to remove it from the database</p>
     <br>
     <div class="d-inline-flex gap-2 mb-5">
         <form method="POST">
