--- a/web_application/templates/networks/delete_network.html
+++ b/web_application/templates/networks/delete_network.html
@@ -5,7 +5,7 @@
 <div class="jumbotron text-center p-5">
     <h1>Delete a Network</h1>
     <br>
-    <p>Enter a network ID to remove it from the database</p>
+    <p>Select a Network to remove it from the database</p>
     <br>
     <div class="d-inline-flex gap-2 mb-5">
         <form method="POST">
