--- a/web_application/templates/networks/list_networks.html
+++ b/web_application/templates/networks/list_networks.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="jumbotron text-center p-5">
     <h1>List of Networks</h1>
-    <p>Here is a list of the networks in the database</p>
+    <p>Here is a list of the Networks in the database</p>
     <div class="btn-group" role="group" aria-label="Default button group">
         {% if networks|length == 0 %}
         <a type="button" class="btn" href="{{url_for('networks.add_network')}}">Add Network</a>
