--- a/web_application/templates/authentication/populate_tables.html
+++ b/web_application/templates/authentication/populate_tables.html
@@ -1,3 +1,5 @@
+<!-- Template for populating databases -->
+
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron text-center p-5">
