--- a/web_application/templates/base.html
+++ b/web_application/templates/base.html
@@ -1,3 +1,8 @@
+<!-- Base template for the application
+    All other templates extend this
+    Bootstrap has been included in this application
+    Docs can be found here: https://getbootstrap.com/ -->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -16,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-        <!-- Include custom CSS file -->
+    <!-- Include custom CSS file -->
     <link rel="stylesheet" href="../../static/main.css">
 </head>
 
