--- a/web_application/templates/base.html
+++ b/web_application/templates/base.html
@@ -42,7 +42,7 @@
                         <a class="nav-link" href="{{url_for('networks.list_networks')}}">Networks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('index')}}">Kickoff Run</a>
+                        <a class="nav-link" href="{{url_for('kickoff.kickoff_run')}}">Kickoff Run</a>
                     </li>
                     {% endif %}
                 </ul>
