--- a/web_application/templates/devices/update_device.html
+++ b/web_application/templates/devices/update_device.html
@@ -27,7 +27,7 @@
                 {{form.os(class="form-control", placeholder="")}}
                 {{form.os.label}}
             </div>
-            <p>IP</p>
+            <p>New IP</p>
             {% for subfield in form.ip %}
             <div class="form-check form-check-inline">
                 <td>{{subfield(class="form-check-input")}}
