--- a/web_application/templates/kickoff_run.html
+++ b/web_application/templates/kickoff_run.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="jumbotron text-center p-5">
-    <h1>Kickoff a Jenkins Run</h1>
+    <h1>Kick Off a Jenkins Run</h1>
     <br>
     <p>Select a Device and a Network, then click start run</p>
     <br>
