--- a/web_application/templates/networks/update_network.html
+++ b/web_application/templates/networks/update_network.html
@@ -17,7 +17,7 @@
                 {{form.name(class="form-control", placeholder="")}}
                 {{form.name.label()}}
             </div>
-            <p>Current Datatype</p>
+            <p>New Datatype</p>
             {% for subfield in form.datatype %}
             <div class="form-check form-check-inline">
                 <td>{{subfield(class="form-check-input")}}</td>
